# rust_watchdog

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.py  dashboard.py  db.py  local_test.sh  local_tui.sh  main.py  scan_test.py  shared_state.py  validation.py  watchdog.events.ndjson  watchdog.status.json  watchdog.toml.example  watchdog_report.py  watchdogctl
.dev/: local_test.sh  local_tui.sh
.github/workflows/: ci.yml
.local_tui_run/: events.ndjson  status.json  watchdog.local_tui.toml
.tests/: healthcheck_cli.rs  pipeline_flow.rs  real_tools.rs  simulation_contract.rs
.watchdog/: watchdog.toml.example
.watchdog/presets/: AV1_MKV.json  HEVC_MKV.json
deploy/: docker-compose.personal-server.yml  run-personal-server.sh  watchdog.personal-server.host.toml  watchdog.personal-server.toml
docs/: deployment.md  getting-started.md  local-vs-nfs.md  presets.md
presets/: AV1_MKV.json
src/: config.rs  config_editor.rs  db.rs  diagnostics.rs  error.rs  event_journal.rs  in_use.rs  lib.rs  main.rs  metrics.rs  nfs.rs  notify.rs  pipeline.rs  probe.rs  process.rs  runtime.rs  scanner.rs  selection.rs  simulate.rs  state.rs  stats.rs  status_snapshot.rs  traits.rs  transcode.rs  transfer.rs  util.rs
src/tui/: cooldown_tab.rs  dashboard_tab.rs  history_tab.rs  logs_tab.rs  mod.rs  queue_tab.rs  widgets.rs
static/: style.css
templates/: index.html
tests/: healthcheck_cli.rs  perf_harness.rs  pipeline_flow.rs  real_tools.rs  simulation_contract.rs
watchdog.preset-cache/: watchdog_preset_f73ee0e2621c816b.json
