[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"
description = "Jellyfin AV1 Transcoding Watchdog"

[[bin]]
name = "watchdog"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
regex = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
nix = { version = "0.31", features = ["term", "poll", "fs"] }
which = "7"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
