[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"
description = "Jellyfin Transcoding Watchdog"

[[bin]]
name = "watchdog"
path = "src/main.rs"

[[test]]
name = "healthcheck_cli"
path = ".tests/healthcheck_cli.rs"

[[test]]
name = "perf_harness"
path = ".tests/perf_harness.rs"

[[test]]
name = "pipeline_flow"
path = ".tests/pipeline_flow.rs"

[[test]]
name = "real_tools"
path = ".tests/real_tools.rs"

[[test]]
name = "simulation_contract"
path = ".tests/simulation_contract.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
regex = "1"
globset = "0.4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
nix = { version = "0.31", features = ["term", "poll", "fs", "signal", "process"] }
which = "7"
libc = "0.2"
minreq = { version = "2", features = ["https-rustls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
